// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a Success message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
  >
    <p>
      Success!!!
    </p>
  </div>
</DocumentFragment>
`;

exports[`displays an Error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-error"
  >
    <p>
      Error!
    </p>
  </div>
</DocumentFragment>
`;

exports[`displays nothing, if message prop is empty 1`] = `<DocumentFragment />`;
